updated DAO part

--- a/Implementation/pom.xml
+++ b/Implementation/pom.xml
@@ -19,5 +19,10 @@
 			<artifactId>Interfaces</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.harsha</groupId>
+			<artifactId>Data</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
   </dependencies>
 </project>
