--- a/Data/pom.xml
+++ b/Data/pom.xml
@@ -14,15 +14,19 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <dependencies>
-       <dependency>
-            <groupId>org.eclipse.persistence</groupId>
-            <artifactId>javax.persistence</artifactId>
-            <version>2.0.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            </dependency>
+<!--        <dependency> -->
+<!--             <groupId>org.eclipse.persistence</groupId> -->
+<!--             <artifactId>javax.persistence</artifactId> -->
+<!--             <version>2.0.0</version> -->
+<!--         </dependency> -->
+<!--         <dependency> -->
+<!--             <groupId>org.hibernate</groupId> -->
+<!--             <artifactId>hibernate-entitymanager</artifactId> -->
+<!--             </dependency> -->
+	<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
